packages/typ/tests/fixtures/diagnostics/0382_external_identity_use_mismatch_07.ml
external id_eta : int -> int = "%identity"
let _ = id_eta true
